WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278620
[libpas] do not use WebKitAdditions when it is not built as a part of bmalloc
https://bugs.webkit.org/show_bug.cgi?id=278620
Summary
[libpas] do not use WebKitAdditions when it is not built as a part of bmalloc
Yusuke Suzuki
Reported
2024-08-24 22:48:48 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2024-08-24 22:48:49 PDT
<
rdar://problem/130847131
>
Yusuke Suzuki
Comment 2
2024-08-24 22:49:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32680
EWS
Comment 3
2024-08-26 09:44:14 PDT
Committed
282745@main
(8699cc35e7e3): <
https://commits.webkit.org/282745@main
> Reviewed commits have been landed. Closing PR #32680 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug