[libpas] do not use WebKitAdditions when it is not built as a part of bmalloc https://bugs.webkit.org/show_bug.cgi?id=278620 rdar://130847131

Reviewed by Yijia Huang.

1. Do not use WebKitAdditions when it is not built as a part of bmalloc, causing build failures.
2. Upgrade deployment target of testing-purpose-only-build from macOS 11.0 to 15.0.

* Source/bmalloc/libpas/libpas.xcodeproj/project.pbxproj:
* Source/bmalloc/libpas/src/libpas/pas_utils.h:

Canonical link: https://commits.webkit.org/282745@main