Source/bmalloc/libpas/src/libpas/pas_utils.h
@@ -55,9 +55,11 @@ PAS_IGNORE_CLANG_WARNINGS_BEGIN("qualifier-requires-header")
 
 PAS_BEGIN_EXTERN_C;
 
+#if PAS_BMALLOC
 #if defined(__has_include)
 #if __has_include(<WebKitAdditions/pas_utils_additions.h>) && !PAS_ENABLE_TESTING
 #include <WebKitAdditions/pas_utils_additions.h>
+#endif
 #endif
 #endif
 
